ajustes de publicaciones
